# Side_Programming_Projects

./: .gitattributes  .gitignore  README.md  fr_README.md
C++/: README.md
C++/Prog_Av/: Biblio.cpp  Biblio.h  CMakeLists.txt  main.cpp
C++/TP1_Agenda/: Agenda.cpp  Agenda.h  CMakeLists.txt  Entree.cpp  Entree.h  Tableau.cpp  Tableau.h  main.cpp
C++/TP2_Agenda/: Agenda.cpp  Agenda.h  CMakeLists.txt  Entree.cpp  Entree.h  Tableau.cpp  Tableau.h  main.cpp
C++/TP3_Heritage/: Article.cpp  Article.h  CMakeLists.txt  Document.cpp  Document.h  Livre.cpp  Livre.h  main.cpp
C++/TP4_Virtualite_Polymorphisme/: Article.cpp  Article.h  Biblio.cpp  Biblio.h  CMakeLists.txt  Document.cpp  Document.h  Livre.cpp  Livre.h  main.cpp
Octave/Com_Rob/: Comm_Rob.m
Octave/Est_Loc_TP/: Est_Loc_TP2.m
Octave_Matlab/: README.md
Octave_Matlab/Com_Rob/: Comm_Rob.m  Courbe_4_b.m  Q_II_2_4.slx  Q_II_2_4.slxc  Q_II_3_6.slx  Q_II_3_6.slxc  Q_II_5.slx  Q_II_5.slxc  Q_II_6.slx  Q_II_6.slxc  lib_robotRP.mdl  sf_loi_avant_RP.m  sf_retour_linearisant_boucle_interne_RP.m
Octave_Matlab/Est_Loc_TP/: Est_Loc_TP2.m
Python/: .gitignore
Python/AR4 HMI interface 3.0 source/: AR4.py  ARbot.cal  ErrorLog  readme.txt
Python/Cones_Detection/: SSD_Dataset_setting.py
Python/Cones_Detection/pythonProject/: Cone_Detection.py  SSD_AI_training.py
Python/FS__PercepSimu/FS_Simu/: POV.py  Simu.py  detection.py  machine_training.py  sphere_model.py  testito.py  todo.py  videOCV.py  video_result.avi  (+1 more)
Python/MachineLearning/: ModuleTPClassif.py  TP.py  TP1.py  TP1_cont.py  TP2.py  tp_test.py
(+1 files in other folders)
